Issue #9007: Create jdk15 Input files compilation job in Travis